--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   "author": "trzewiczek",
   "license": "MIT",
   "scripts": {
-    "go": "tsc && node ./build/index.js"
+    "build": "webpack",
+    "local": "webpack serve"
   },
   "devDependencies": {
-    "typescript": "^4.1.5"
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^5.1.0",
+    "source-map-loader": "^2.0.1",
+    "typescript": "^4.1.5",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
