--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "local": "webpack serve"
+    "local": "webpack serve",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.1.0",
+    "jest": "^26.6.3",
     "source-map-loader": "^2.0.1",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
