--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
   "scripts": {
     "build": "webpack",
     "local": "webpack serve",
-    "test": "jest",
+    "lint": "ts-standard --fix --verbose | snazzy",
+    "test": "yarn lint && jest",
     "test:watch": "jest --watch"
+  },
+  "ts-standard": {
+    "env": {
+      "jest": true
+    },
+    "project": "./tsconfig.json"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.1.0",
     "jest": "^26.6.3",
+    "snazzy": "^9.0.0",
     "source-map-loader": "^2.0.1",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "ts-standard": "^10.0.0"
   }
 }
