--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "jsx": "react",
     "module": "commonjs",
     "noImplicitAny": true,
+    "strictNullChecks": true,
     "outDir": "./build/",
     "preserveConstEnums": true,
     "removeComments": true,
@@ -10,6 +11,6 @@
     "target": "es5"
   },
   "include": [
-    "src/index.ts"
+    "src"
   ]
 }
