--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^17.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.1.0",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
     "snazzy": "^9.0.0",
     "source-map-loader": "^2.0.1",
